DOCS: Rework native access guidance for fat jar examples
Explains that a fat jar can only use ALL-UNNAMED, since everything inside it is part of the unnamed module, and points at the individual-jar layout that can be narrowed. Per 51Degrees/device-detection-java#476.