@@ -103,25 +103,16 @@ java -cp .\console\target\device-detection-java-examples.console-4.4.20-jar-with
 
 ### Native library access
 
-The on-premise examples load a native library through `System.load`. Recent JDKs treat
-that as a restricted method and warn unless native access has been granted
-(see [JEP 472](https://openjdk.org/jeps/472)). The fat JARs above put everything on the
-classpath, so the permission to use is `ALL-UNNAMED`:
+The on-premise examples use a native library, and
+[JEP 472](https://openjdk.org/jeps/472) restricts the operations needed to load it.
+Java 24 and 25 warn once per calling module, and a later release will refuse the call.
+
+The fat JARs above bundle everything into a single jar on the classpath, so the
+permission to use is `ALL-UNNAMED`:
 
 ```bash
 java -cp .\console\target\device-detection-java-examples.console-4.4.20-jar-with-dependencies.jar --enable-native-access=ALL-UNNAMED fiftyone.devicedetection.examples.console.OfflineProcessing
 ```
-
-If you run against the individual pipeline JARs on the module path instead, grant
-access to the module that performs the load:
-
-```bash
-java --module-path libs --enable-native-access=fiftyone.pipeline.engines.fiftyone -m your.app/com.example.Main
-```
-
-See the
-[pipeline-java README](https://github.com/51Degrees/pipeline-java#java-modules-and-native-library-access)
-for the module names and the caveats that apply on the module path.
 
 With the Maven exec plugin:
 
@@ -133,3 +124,9 @@ With the Maven exec plugin:
     </arguments>
 </configuration>
 ```
+
+A fat jar cannot narrow this any further, because everything inside it is part of the
+unnamed module. To grant native access to 51Degrees code alone you need the individual
+jars, with `pipeline.engines.fiftyone` and `device-detection.hash.engine.on-premise` on
+the module path - see the
+[device-detection-java README](https://github.com/51Degrees/device-detection-java#native-library-access).
